--- a/css/style.css
+++ b/css/style.css
@@ -264,7 +264,8 @@ body{
     border-radius: 8px;
     padding: 20px;
     width: 80%;
-    max-width: 600px;
+    font-size: medium;
+    max-width: 700px;
     max-height: 80vh;
     overflow-y: auto;
     position: relative;
@@ -1003,6 +1004,8 @@ body{
         color: #aaa;
         font-size: 1.5rem;
     }
+  
+
 
     .footer {
         position: relative;
